--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,12 @@ jobs:
           distribution: 'temurin'
           java-version: '11'
 
+      - name: Set Executable Permissions for Binary Files
+        run: |
+          chmod +x src/main/resources/cx-linux
+          chmod +x src/main/resources/cx.exe
+          chmod +x src/main/resources/cx-mac
+
       - name: Check existence of cx-linux binary
         run: |
           if [ ! -f "src/main/resources/cx-linux" ]; then
@@ -53,14 +59,27 @@ jobs:
             echo "cx-mac binary does not exist"; exit 1;
           fi
 
-      - name: Run tests with Maven
-        run: mvn -B test --file pom.xml
+      - name: Run tests with Maven and Generate Coverage Report
+        run: |
+          mvn clean verify
+          mvn jacoco:report
         env:
           CX_CLIENT_ID: ${{ secrets.CX_CLIENT_ID }}
           CX_CLIENT_SECRET: ${{ secrets.CX_CLIENT_SECRET }}
           CX_BASE_URI: ${{ secrets.CX_BASE_URI }}
           CX_TENANT: ${{ secrets.CX_TENANT }}
           CX_APIKEY: ${{ secrets.CX_APIKEY }}
+
+      - name: Display Coverage Summary
+        run: |
+          echo "Code Coverage Summary:"
+          grep -A 10 "Total" target/site/jacoco/jacoco.csv || echo "Coverage report not found."
+
+      - name: Upload JaCoCo Coverage Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: jacoco-report
+          path: target/site/jacoco/*
 
       - name: Build with Maven
         run: mvn -B verify -DskipTests -Dgpg.skip --file pom.xml
@@ -70,36 +89,3 @@ jobs:
         uses: jwgmeligmeyling/spotbugs-github-action@b8e2c3523acb34c87f14e18cbcd2d87db8c8584e #v1.2
         with:
           path: '**/spotbugsXml.xml'
-
-  code-coverage:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Cache local Maven repository
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v4.3.0
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-
-      - name: Generate and Display Code Coverage Report
-        run: |
-          mvn clean verify
-          mvn jacoco:report
-          echo "Code Coverage Summary:"
-          grep -A 10 "Total" target/site/jacoco/jacoco.csv || echo "Coverage report not found."
-
-      - name: Upload JaCoCo Coverage Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: jacoco-report
-          path: target/site/jacoco/*
