--- a/pom.xml
+++ b/pom.xml
@@ -73,10 +73,16 @@
                     </execution>
                     <execution>
                         <id>report</id>
-                        <phase>verify</phase>
+                        <phase>test</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
+                        <configuration>
+                            <includes>
+                                <include>**/src/main/java/**</include>
+                                <!-- Add other patterns as needed -->
+                            </includes>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
