--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,11 @@ jobs:
           COVERAGE_PERCENTAGE=$(echo "scale=2; $COVERED_LINES / $TOTAL_LINES * 100" | bc)
           echo "Total coverage percentage: $COVERAGE_PERCENTAGE%"
 
+      - name: Generate JaCoCo Badge
+        uses: cicirello/jacoco-badge-generator@f33476a5a3fd5a4f77cb5eef2ebe728c1dd5b921 #v2.11.0
+        with:
+          jacoco-csv-file: target/site/jacoco/jacoco.csv
+
       - name: Upload JaCoCo coverage report
         uses: actions/upload-artifact@c7d193f32edcb7bfad88892161225aeda64e9392 #v4
         with:
