--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
                 <version>0.8.8</version>
                 <executions>
                     <execution>
+                        <id>prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
@@ -78,14 +79,26 @@
                             <goal>report</goal>
                         </goals>
                         <configuration>
-                            <includes>
-                                <include>**/src/main/java/**</include>
-                                <!-- Add other patterns as needed -->
-                            </includes>
+                            <excludes>
+                                <exclude>**/com/checkmarx/ast/results/**</exclude>
+                                <exclude>**/com/checkmarx/ast/results/result/**</exclude>
+                                <exclude>**/com/checkmarx/ast/kicsRealtimeResults/**</exclude>
+                                <exclude>**/com/checkmarx/ast/kicsRealtimeResults/ast/kicsRealtimeResult/**</exclude>
+                                <exclude>**/com/checkmarx/ast/asca/**</exclude>
+                                <exclude>**/com/checkmarx/ast/learnMore/**</exclude>
+                                <exclude>**/com/checkmarx/ast/predicate/**</exclude>
+                                <exclude>**/com/checkmarx/ast/scan/**</exclude>
+                                <exclude>**/com/checkmarx/ast/codebashing/**</exclude>
+                                <exclude>**/com/checkmarx/ast/remediation/**</exclude>
+                                <exclude>**/com/checkmarx/ast/project/**</exclude>
+                                <exclude>**/com/checkmarx/ast/tenant/**</exclude>
+                                <exclude>**/com/checkmarx/ast/wrapper/Execution**</exclude>
+                            </excludes>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
