--- a/pom.xml
+++ b/pom.xml
@@ -80,19 +80,17 @@
                         </goals>
                         <configuration>
                             <excludes>
-                                <exclude>com/checkmarx/ast/results/**</exclude>
-                                <exclude>com/checkmarx/ast/results/result/**</exclude>
-                                <exclude>com/checkmarx/ast/kicsRealtimeResults/**</exclude>
-                                <exclude>com/checkmarx/ast/kicsRealtimeResults/ast/kicsRealtimeResult/**</exclude>
-                                <exclude>com/checkmarx/ast/asca/**</exclude>
-                                <exclude>com/checkmarx/ast/learnMore/**</exclude>
-                                <exclude>com/checkmarx/ast/predicate/**</exclude>
-                                <exclude>com/checkmarx/ast/scan/**</exclude>
-                                <exclude>com/checkmarx/ast/codebashing/**</exclude>
-                                <exclude>com/checkmarx/ast/remediation/**</exclude>
-                                <exclude>com/checkmarx/ast/project/**</exclude>
-                                <exclude>com/checkmarx/ast/tenant/**</exclude>
-                                <exclude>com/checkmarx/ast/wrapper/Execution**</exclude>
+                                <exclude>**/com/checkmarx/ast/results/**</exclude>
+                                <exclude>**/com/checkmarx/ast/kicsRealtimeResults/**</exclude>
+                                <exclude>**/com/checkmarx/ast/asca/**</exclude>
+                                <exclude>**/com/checkmarx/ast/learnMore/**</exclude>
+                                <exclude>**/com/checkmarx/ast/predicate/**</exclude>
+                                <exclude>**/com/checkmarx/ast/scan/**</exclude>
+                                <exclude>**/com/checkmarx/ast/codebashing/**</exclude>
+                                <exclude>**/com/checkmarx/ast/remediation/**</exclude>
+                                <exclude>**/com/checkmarx/ast/project/**</exclude>
+                                <exclude>**/com/checkmarx/ast/tenant/**</exclude>
+                                <exclude>**/com/checkmarx/ast/wrapper/Execution**</exclude>
                             </excludes>
 
 
