--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,50 +68,14 @@ jobs:
           CX_TENANT: ${{ secrets.CX_TENANT }}
           CX_APIKEY: ${{ secrets.CX_APIKEY }}
 
-      - name: Print filtered coverage percentage
+      - name: Print total coverage percentage
         run: |
-          COVERED_LINES=$(xmllint --xpath "sum(//report/package[
-            not(starts-with(@name, 'com.checkmarx.ast.results')) and
-            not(starts-with(@name, 'com.checkmarx.ast.kicsRealtimeResults')) and
-            not(starts-with(@name, 'com.checkmarx.ast.asca')) and
-            not(starts-with(@name, 'com.checkmarx.ast.learnMore')) and
-            not(starts-with(@name, 'com.checkmarx.ast.predicate')) and
-            not(starts-with(@name, 'com.checkmarx.ast.scan')) and
-            not(starts-with(@name, 'com.checkmarx.ast.codebashing')) and
-            not(starts-with(@name, 'com.checkmarx.ast.remediation')) and
-            not(starts-with(@name, 'com.checkmarx.ast.project')) and
-            not(starts-with(@name, 'com.checkmarx.ast.tenant')) and
-            not(starts-with(@name, 'com.checkmarx.ast.wrapper.Execution'))
-          ]/counter[@type='LINE']/@covered)" target/site/jacoco/jacoco.xml)
-
-          MISSED_LINES=$(xmllint --xpath "sum(//report/package[
-            not(starts-with(@name, 'com.checkmarx.ast.results')) and
-            not(starts-with(@name, 'com.checkmarx.ast.kicsRealtimeResults')) and
-            not(starts-with(@name, 'com.checkmarx.ast.asca')) and
-            not(starts-with(@name, 'com.checkmarx.ast.learnMore')) and
-            not(starts-with(@name, 'com.checkmarx.ast.predicate')) and
-            not(starts-with(@name, 'com.checkmarx.ast.scan')) and
-            not(starts-with(@name, 'com.checkmarx.ast.codebashing')) and
-            not(starts-with(@name, 'com.checkmarx.ast.remediation')) and
-            not(starts-with(@name, 'com.checkmarx.ast.project')) and
-            not(starts-with(@name, 'com.checkmarx.ast.tenant')) and
-            not(starts-with(@name, 'com.checkmarx.ast.wrapper.Execution'))
-          ]/counter[@type='LINE']/@missed)" target/site/jacoco/jacoco.xml)
-
-          if [ -z "$COVERED_LINES" ] || [ -z "$MISSED_LINES" ]; then
-            echo "Error: Could not extract coverage data from jacoco.xml"
-            exit 1
-          fi
-
+          COVERED_LINES=$(xmllint --xpath "string(//report/counter[@type='LINE']/@covered)" target/site/jacoco/jacoco.xml)
+          MISSED_LINES=$(xmllint --xpath "string(//report/counter[@type='LINE']/@missed)" target/site/jacoco/jacoco.xml)
           TOTAL_LINES=$((COVERED_LINES + MISSED_LINES))
-
-          if [ "$TOTAL_LINES" -eq 0 ]; then
-            COVERAGE_PERCENTAGE=0
-          else
-            COVERAGE_PERCENTAGE=$(echo "scale=2; $COVERED_LINES / $TOTAL_LINES * 100" | bc)
-          fi
-
-          echo "Filtered coverage percentage: $COVERAGE_PERCENTAGE%"
+          COVERAGE_PERCENTAGE=$(echo "scale=2; $COVERED_LINES / $TOTAL_LINES * 100" | bc)
+          echo "Total coverage percentage: $COVERAGE_PERCENTAGE%"
+      
       
       
       
