--- a/pom.xml
+++ b/pom.xml
@@ -77,10 +77,10 @@
                         <exclude>**/com/checkmarx/ast/remediation/**</exclude>
                         <exclude>**/com/checkmarx/ast/project/**</exclude>
                         <exclude>**/com/checkmarx/ast/tenant/**</exclude>
-                        <exclude>**/com/checkmarx/ast/wrapper/Execution**</exclude>
-                        <exclude>**/com/checkmarx/ast/wrapper/CxConstants**</exclude>
-                        <exclude>**/com/checkmarx/ast/wrapper/CxException**</exclude>
-                        <exclude>**/com/checkmarx/ast/wrapper/CxConfig**</exclude>
+                        <exclude>**/com/checkmarx/ast/wrapper/Execution.class</exclude>
+                        <exclude>**/com/checkmarx/ast/wrapper/CxConstants.class</exclude>
+                        <exclude>**/com/checkmarx/ast/wrapper/CxException.class</exclude>
+                        <exclude>**/com/checkmarx/ast/wrapper/CxConfig.class</exclude>
 
                         <!-- Add other patterns as needed -->
                     </excludes>
