--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,7 +117,7 @@ jobs:
           prerelease: ${{ inputs.dev }}
 
   notify:
-    if: inputs.dev == false || inputs.tag == 'test-notifyy'
+    if: inputs.dev == false
     needs: release
     uses: Checkmarx/plugins-release-workflow/.github/workflows/release-notify.yml@main
     with:
