--- a/.github/workflows/update-cli.yml
+++ b/.github/workflows/update-cli.yml
@@ -62,7 +62,7 @@ jobs:
         if: steps.checkmarx-ast-cli.outputs.current_tag != steps.checkmarx-ast-cli.outputs.release_tag
         uses: peter-evans/create-pull-request@b1ddad2c994a25fbc81a28b3ec0e368bb2021c50 #v6
         with:
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          token: ${{ secrets.AUTOMATION_TOKEN }}
           commit-message: Update checkmarx-ast-cli to ${{ steps.checkmarx-ast-cli.outputs.release_tag }}
           title: Update checkmarx-ast-cli binaries with ${{ steps.checkmarx-ast-cli.outputs.release_tag }}
           body: |
@@ -78,6 +78,6 @@ jobs:
         if: ${{ github.event_name == 'repository_dispatch' && steps.cretae_pull_request.outputs.pull-request-operation == 'created' }}
         uses: peter-evans/enable-pull-request-automerge@v3
         with:
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          token: ${{ secrets.AUTOMATION_TOKEN }}
           pull-request-number: ${{ steps.cretae_pull_request.outputs.pull-request-number }}
           merge-method: squash
