remove auto merge

--- a/.github/workflows/update-cli.yml
+++ b/.github/workflows/update-cli.yml
@@ -74,10 +74,10 @@ jobs:
           labels: cxone
           branch: feature/update_cli
 
-      - name: Enable Pull Request Automerge
-        if: ${{ github.event_name == 'repository_dispatch' && steps.cretae_pull_request.outputs.pull-request-operation == 'created' }}
-        uses: peter-evans/enable-pull-request-automerge@v3
-        with:
-          token: ${{ secrets.AUTOMATION_TOKEN }}
-          pull-request-number: ${{ steps.cretae_pull_request.outputs.pull-request-number }}
-          merge-method: squash
+      # - name: Enable Pull Request Automerge
+      #   if: ${{ github.event_name == 'repository_dispatch' && steps.cretae_pull_request.outputs.pull-request-operation == 'created' }}
+      #   uses: peter-evans/enable-pull-request-automerge@v3
+      #   with:
+      #     token: ${{ secrets.AUTOMATION_TOKEN }}
+      #     pull-request-number: ${{ steps.cretae_pull_request.outputs.pull-request-number }}
+      #     merge-method: squash
