--- a/.github/workflows/update-cli.yml
+++ b/.github/workflows/update-cli.yml
@@ -72,7 +72,7 @@ jobs:
 
             [1]: https://github.com/Checkmarx/checkmarx-ast-cli
           labels: cxone
-          branch: feature/update_cli
+          branch: feature/update_cli_${{ steps.checkmarx-ast-cli.outputs.release_tag }}
 
       # - name: Enable Pull Request Automerge
       #   if: ${{ github.event_name == 'repository_dispatch' && steps.cretae_pull_request.outputs.pull-request-operation == 'created' }}
