Update Jenkins/Jetbrains/Eclipse with new release (AST-000)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -128,3 +128,14 @@ jobs:
       release_url: https://github.com/CheckmarxDev/ast-cli-java-wrapper/releases/tag/${{ needs.release.outputs.TAG_NAME }}
       jira_product_name: JAVA_WRAPPER
     secrets: inherit
+
+  dispatch_auto_release:
+    name: Update Jenkins/Jetbrains/Eclipse Extensions With new Wrapper Version
+    if: inputs.dev == false
+    needs: notify
+    uses: Checkmarx/plugins-release-workflow/.github/workflows/dispatch-workflow.yml@main
+    with:
+      cli_version: ${{ needs.release.outputs.CLI_VERSION }}
+      is_cli_release: false
+      is_java_release: true
+    secrets: inherit
