--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,6 +102,20 @@ jobs:
           echo "CLI_VERSION=$CLI_VERSION" >> $GITHUB_ENV
           echo "::set-output name=CLI_VERSION::$CLI_VERSION"
 
+      - name: Check if CLI version is latest
+        id: check_latest_cli_version
+        run: |
+          LATEST_CLI_VERSION=$(curl -s https://github.com/Checkmarx/ast-cli/releases/latest | grep -oP 'tag/\K[0-9]+\.[0-9]+\.[0-9]+')
+          echo "CLI_VERSION=[$CLI_VERSION]"
+          echo "LATEST_CLI_VERSION=[$LATEST_CLI_VERSION]"
+          echo "Latest CLI version from GitHub: $LATEST_CLI_VERSION"
+          if [ "$CLI_VERSION" = "$LATEST_CLI_VERSION" ]; then
+            echo "CLI_VERSION ($CLI_VERSION) matches the latest released version ($LATEST_CLI_VERSION). Proceeding."
+          else
+            echo "CLI_VERSION ($CLI_VERSION) does not match the latest released version ($LATEST_CLI_VERSION). Failing workflow."
+            exit 1
+          fi    
+
       - name: Publish package
         run: mvn --batch-mode deploy -DskipTests ${{ env.AID_PROP }}
         env:
