--- a/pom.xml
+++ b/pom.xml
@@ -214,8 +214,8 @@
 
     <developers>
         <developer>
-            <name>Jay Nanduri</name>
-            <email>jay.nanduri@checkmarx.com</email>
+            <name>Rahul Pidde</name>
+            <email>rahul.pidde@checkmarx.com</email>
             <organization>Checkmarx</organization>
             <organizationUrl>https://www.checkmarx.com/</organizationUrl>
         </developer>
