check cli version only when it is not dev build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -103,6 +103,7 @@ jobs:
           echo "::set-output name=CLI_VERSION::$CLI_VERSION"
 
       - name: Check if CLI version is latest
+        if: ${{ github.event.inputs.dev == 'false' }}
         id: check_latest_cli_version
         run: |
           LATEST_CLI_VERSION=$(curl -s https://api.github.com/repos/Checkmarx/ast-cli/releases/latest | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
