--- a/pom.xml
+++ b/pom.xml
@@ -233,5 +233,11 @@
             <organization>Checkmarx</organization>
             <organizationUrl>https://www.checkmarx.com/</organizationUrl>
         </developer>
+        <developer>
+            <name>Anand Nandeshwar</name>
+            <email>anand.nandeshwar@checkmarx.com</email>
+            <organization>Checkmarx</organization>
+            <organizationUrl>https://www.checkmarx.com/</organizationUrl>
+        </developer>
     </developers>
 </project>
