updated team name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -134,7 +134,7 @@ jobs:
   notify:
     if: inputs.dev == false
     needs: release
-    uses: Checkmarx/plugins-release-workflow/.github/workflows/release-notify.yml@update-jira-release-token
+    uses: Checkmarx/plugins-release-workflow/.github/workflows/release-notify.yml@main
     with:
       product_name: Java Wrapper
       release_version: ${{ needs.release.outputs.TAG_NAME }}
