--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,4 +2,4 @@
 # Each line is a file pattern followed by one or more owners
 
 # Specify the default owners for the entire repository
-*       @cx-anurag-dalke @cx-anand-nandeshwar @cx-atish-jadhav
+#*       @cx-anurag-dalke @cx-anand-nandeshwar @cx-atish-jadhav
